# SAM-Pedestrian-RT-Distilled

./: .gitignore  README.md  pyproject.toml
distill/: train.py
distill/configs/: ped_yolov8n.yaml
docs/: PHASE_2_PLAN.md  RESULTS_PHASE_2.md
eval/: benchmark.py  failure_mode.py  labeling_agreement.py  viz_3d.py
outputs/: failure_mode.json  labeling_agreement.json
runs/segment/runs/ped_1h/: args.yaml  results.csv
runs/segment/runs/ped_smoke/: args.yaml  results.csv
runtime/: build_trt.py  demo_live.py  export_onnx.py  pedestrian_expert.py
scripts/: build_coco_person_subset.py  build_distill_dataset.py  fetch_nuscenes_mini.py  fetch_sample_video.py  run_1h_v2.sh  run_full.sh  run_phase2.sh  run_smoke.sh  setup.sh
teacher/: carla_synth.py  lidar_lift.py  nuscenes_sam3_oracle.py  pseudolabel_filter.py  sam3_autolabel.py
